fix(ui): fix scrollbar-x functionality when it's above pagination widget table element
fixes gravitee-io/issues#3243

--- a/src/components/widget/_widget.scss
+++ b/src/components/widget/_widget.scss
@@ -38,6 +38,7 @@
   left: 0;
   position: absolute;
   width: 100%;
+  z-index: -1;
 
   .buttons {
     margin-right: 10px !important;
